Address IntelliJ java language level mitigation aids inspections